syntax = "proto3";
package orderbookpb;

import "google/protobuf/timestamp.proto";

service OrderBookgRPCService {
  rpc ProcessLimitOrder(LimitOrderRequest) returns(LimitOrderResponse);
  rpc ProcessMarketOrder(MarketOrderRequest) returns(MarketOrderResponse);
  rpc CancelOrder(CancelOrderRequest) returns(CancelOrderResponse);
  rpc Depth(Empty) returns(DepthResponse);
}


message LimitOrderRequest {
  int32 side = 1;
  string order_id = 2;
  string quantity = 3;
  string price = 4;
}

message PriceLevel {
  string price = 1;
  string quantity = 2;
}

message Order {
  int32 side = 1;
  string id = 2;
  google.protobuf.Timestamp timestamp = 3;
  string quantity = 4;
  string price = 5;
}

message LimitOrderResponse {
  repeated Order orders = 1;
  Order partial = 2;
  string partial_quantity_processed = 3;
}

message MarketOrderRequest {
  int32 side = 1;
  string quantity = 2;
}

message MarketOrderResponse {
  repeated Order done = 1;
  Order partial = 2;
  string partial_quantity_processed = 3;
  string quantity_left = 4;
}

message CancelOrderRequest {
  string  id = 1;
}

message CancelOrderResponse {
  Order order = 1;
}

message Empty {}

message DepthResponse {
  repeated PriceLevel bids = 1;
  repeated PriceLevel asks = 2;
}